--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "@angular/core": "7.0.4",
     "@angular/platform-browser": "7.0.4",
     "@angular/platform-browser-dynamic": "7.0.4",
-    "@ngx-translate/core": "11.0.1",
+    "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
-    "@ngx-translate/i18n-polyfill": "^1.0.0",
     "@types/jasmine": "2.8.12",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "8.9.5",
     "core-js": "2.5.7",
-    "ngx-i18nsupport": "^0.17.1",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   },
@@ -26,10 +24,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "extract": "ngx-translate-extract --input ./src --output ./src/assets/i18n/es.json ./src/assets/i18n/en.json ./src/assets/i18n/fr.json --clean --sort --verbose --format namespaced-json",
-    "extract-i18n": "ng xi18n --output-path locale --i18n-locale en && xliffmerge --profile \"./src/locale/xliffmerge.json\" en fr",
-    "ngx-extractor": "ngx-extractor -i \"./src/**/*.ts\" -o src/locale/messages.xlf && xliffmerge --profile \"./src/locale/xliffmerge.json\" en fr",
-    "convert-i18n": "node xlif_to_json.js"
+    "extract": "ngx-translate-extract --input ./src/app --output ./src/assets/i18n/en.json ./src/assets/i18n/es.json ./src/assets/i18n/fr.json ./src/assets/i18n/jp.json --clean --sort --verbose --format namespaced-json"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.11.1",
@@ -51,7 +46,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1",
-    "xliff-conv": "^1.0.11"
+    "typescript": "~3.1.1"
   }
 }
